margin on mobile fix

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -385,6 +385,7 @@ main {
 
             @media (max-width: 768px) {
                 .my-carousel {
+                    margin-top: -80px;
                     height: 90vh;
                     height: 90dvh;
                 }
